--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <title>Flatiron Task Lister</title>
   <link rel="stylesheet" href="./style.css">
+  <!-- <script src="./src/sandbox.js"></script> -->
+  <script defer src="./src/index.js"></script>
 </head>
 <body>
   <div id="main-content">
@@ -21,7 +23,7 @@
       </ul>
     </div>
 
-    <script src="./src/index.js"></script>
+    <!-- <script src="./src/index.js"></script> -->
   </div>
 
 </body>
